<resources>
    <string name="app_name">splach_screen</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="phone_or_email">Phone or Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="create_new_facebook_account">Create new Facebook Account</string>
    <string name="pop_up">Pop Up</string>
    <string name="click_here">Click\nHere</string>
    <string name="home">Home</string>
    <string name="watch">Watch</string>
    <string name="notifications">Notifications</string>
    <string name="menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="re_password">Re-Password</string>
    <string name="register">REGISTER</string>
    <string name="or_sign_up_with">or sign up with</string>
</resources>