<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/login_backGround"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/login" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp"
        android:layout_below="@id/login_backGround">
            <EditText
                android:id="@+id/email_ET"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:hint="@string/phone_or_email"
                android:inputType="textEmailAddress"
                android:background="@color/white"
                android:padding="8dp"/>
        <EditText
            android:id="@+id/password_ET"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@color/white"
            android:padding="8dp"/>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:padding="12dp"/>
        <TextView
            android:id="@+id/forget_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forget Password?"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="#0523A5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#E7E7E7"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="Or"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#E7E7E7"/>
        </LinearLayout>
        <Button
            android:id="@+id/create_new_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_facebook_account"
            android:backgroundTint="#30A24B"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"/>
    </LinearLayout>

</RelativeLayout>